fixed .gap

--- a/style/Lightrays.scss
+++ b/style/Lightrays.scss
@@ -188,7 +188,10 @@ a {
   gap: 16px;
 }
 .small-gap {
-  gap: 16px;
+  gap: 8px;
+}
+.tiny-gap {
+  gap: 4px;
 }
 
 .flex-center {
